--- a/src/index.css
+++ b/src/index.css
@@ -3,4 +3,10 @@ body {
   padding: 0;
   box-sizing: border-box;
   font-family: 'Roboto', sans-serif;
+  background-color: darkorchid !important;
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
 }
