useContext-react, useLocation-routing, log in/log out

--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@ body {
   padding: 0;
   box-sizing: border-box;
   font-family: 'Roboto', sans-serif;
-  background-color: darkorchid !important;
+  background-color: skyblue !important;
 }
 
 a {
